@@ -239,6 +239,7 @@ The following extensions are migrated into MediaWiki 1.14:
 * (bug 15196) Free external links should be numbered in a localised manner
 * (bug 15388) Title of Special:PrefixIndex
 * Links with no title but a curid parameter now use the curid to pick a page
+* (bug 10323) Special:Undelete should have "inverse selection" button
 
 === API changes in 1.14 ===
 
